se agregó la clase: claseJuguetes y un nuevo form para juguetes

--- a/ProyectoColaborativo/src/PaqueteA/Principal.form
+++ b/ProyectoColaborativo/src/PaqueteA/Principal.form
@@ -31,6 +31,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Jugueter&#xed;a"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuJugueteriaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
